--- a/tasks/Debian/pkg.yml
+++ b/tasks/Debian/pkg.yml
@@ -1,4 +1,11 @@
 ---
+- name: Enable Backports repository (Debian).
+  apt_repository:
+    repo: 'deb http://ftp.debian.org/debian {{ ansible_distribution_release }}-backports main'
+    state: present
+    filename: "{{ ansible_distribution_release }}_backports"
+  when: ansible_distribution == "Debian" and  ansible_distribution_major_version == '10'
+
 - name: pkg - Install package
   apt:
     name: monit
