--- a/tasks/monitors.yml
+++ b/tasks/monitors.yml
@@ -53,7 +53,7 @@
   file:
     path: "{{ monit_includes }}/{{ item }}"
     state: absent
-  with_items: "{{monit_services_present.stdout_lines}}"
+  with_items: "{{monit_services_present.stdout_lines | default([])}}"
   when: monit_service_delete_unlisted and item|basename not in ansible_local.monit.monit_configured_services
   notify: reload monit
 
