--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,27 +1,27 @@
 ---
 galaxy_info:
-  author: Peter Golm
+  author: George Boobyer (orig by Peter Golm)
   description: Ansible role for configuring Monit.
   min_ansible_version: 1.6
   license: MIT
   platforms:
-  - name: Debian
-    versions:
-    - all
-  - name: Ubuntu
-    versions:
-    - all
-  - name: EL
-    versions:
-    - all
-  - name: RedHat
-    version:
-    - all
-  - name: Ubuntu
-    versions:
-    - all
+    - name: Debian
+      versions:
+        - all
+    - name: Ubuntu
+      versions:
+        - all
+    - name: EL
+      versions:
+        - all
+    - name: RedHat
+      version:
+        - all
+    - name: Ubuntu
+      versions:
+        - all
 
-  categories:
+  galaxy_tags:
     - monitoring
     - system
 dependencies: []
