--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,4 @@
+---
 monit_cycle: 120
 
 
@@ -26,7 +27,7 @@ monit_mailserver_port: 25
 # monit_mailserver_password:
 
 monit_alert_addresses: []
-  # - support@email.com
+# - support@email.com
 
 monit_alert_mail_from: "root"
 monit_alert_mail_subject: 'Monit Alert: {{ inventory_hostname }}'
@@ -53,22 +54,22 @@ monit_webinterface_bind: 0.0.0.0
 monit_webinterface_port: 2812
 
 # enabkle monit access over https
-monit_ssl_enable: no
+monit_ssl_enable: false
 monit_ssl_cert: ''
 
 monit_apache_rules:
- - "if totalcpu > 80% for 3 cycles then alert"
- - "if totalmem > 400.0 MB for 5 cycles then alert"
- - "if children > 250 then alert"
- - "if loadavg(5min) > 20 for 8 cycles then alert"
+  - "if totalcpu > 80% for 3 cycles then alert"
+  - "if totalmem > 400.0 MB for 5 cycles then alert"
+  - "if children > 250 then alert"
+  - "if loadavg(5min) > 20 for 8 cycles then alert"
 
 monit_memcached_rules:
- - "if failed host 127.0.0.1 port 11211 protocol MEMCACHE then restart"
- - "if cpu > 80% for 3 cycles then alert"
+  - "if failed host 127.0.0.1 port 11211 protocol MEMCACHE then restart"
+  - "if cpu > 80% for 3 cycles then alert"
 
 monit_version: 5.20.0
 # start on boot
-monit_service_enabled: True
+monit_service_enabled: true
 # current state: started, stopped
 monit_service_state: started
 ## Service options
@@ -82,6 +83,14 @@ monit_group: monit
 # deprecated vars
 monit_id_folder: "{{ monit_lib_dir }}"
 
-# monit_webinterface_rw_group: Define group of users allowed to read and write on web interface. It is only applied when defined and is empty by default.
-# monit_webinterface_r_group: Define group of users allowed to read on web interface. It is only applied when defined and is empty by default.
-# monit_webinterface_acl_rules:List of ACL rules for the web interface, such as "localhost" or "hauk:password". It is only applied when defined and is empty by default.
+# monit_webinterface_rw_group:
+# Define group of users allowed to read and write on web interface.
+# It is only applied when defined and is empty by default.
+
+# monit_webinterface_r_group:
+# Define group of users allowed to read on web interface.
+# It is only applied when defined and is empty by default.
+
+# monit_webinterface_acl_rules:
+# List of ACL rules for the web interface, such as "localhost" or "hauk:password".
+# It is only applied when defined and is empty by default.
