--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -5,4 +5,4 @@
     name: monit
     state: "{{ monit_service_state }}"
     enabled: "{{ monit_service_enabled }}"
-    daemon_reload: yes
+    daemon_reload: true
