--- a/vagrant.yml
+++ b/vagrant.yml
@@ -9,7 +9,7 @@
     - name: testing - install apache
       apt:
         pkg: apache2
-        update_cache: yes
+        update_cache: true
         cache_valid_time: 3600
         state: present
 
