Change the conf-enabled directory

--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -1,7 +1,8 @@
 ---
 
 monitrc_conf: "{{ monit_conf_dir }}/monitrc"
-monit_includes: "{{ monit_conf_dir }}/conf.d"
+monit_services_dir: "{{ monit_conf_dir }}/conf.d"
+monit_includes: "{{ monit_conf_dir }}/conf-enabled"
 
 # monit_bin: '/usr/local/bin/monit'
 monit_bin: '/usr/bin'
